@@ -1,3 +1,14 @@
+2005-12-06  David Harrison  <harrison@apple.com>
+
+        Reviewed by Darin.
+	
+        - fix <rdar://problem/4365308> Glendale Regression: Floating dictionary doesn't work well in Safari text areas/fields
+        
+        Add use of NSAccessibilityHitTest to the list of exceptions.
+
+        * WebView.subproj/WebHTMLView.m:
+        (-[WebHTMLView hitTest:]): check for NSFlagsChanged event. 
+
 2005-12-04  Timothy Hatcher  <timothy@apple.com>
 
         Merged fix from TOT to Safari-2-0-branch
